--- a/public/templates/agb/ds-jdbl-de.html
+++ b/public/templates/agb/ds-jdbl-de.html
@@ -5,7 +5,7 @@
 			<p>Wir freuen uns, dass Du an unserem Sommerprogramm teilnehmen möchtest. Damit Du teilnehmen kannst, benötigen wir einige Daten von Dir. Welche das sind, erfahren Du und Deine Eltern / erziehungsberechtigten Personen in diesem Informationsblatt.</p>
 			<ol>
 				<li>
-					<h4>Zweck der Angabe Ihrer personenbezogenen Daten></h4>
+					<h4>Zweck der Angabe Ihrer personenbezogenen Daten</h4>
 					<div>
 						Wir benötigen bestimmte Daten von Dir, damit wir wissen, wer am Sommerprogramm teilnimmt, wie alt Du bist und in welche Klasse Du gehst, da das Programm jungen Menschen ab einem bestimmten Personen vorenthalten ist. Ebenso benötigen wir Daten Deiner Eltern / erziehungsberechtigten Personen für organisatorische Angelegenheiten und Kontakte im Notfall. Zudem benötigen wir einige Gesundheitsdaten von Dir, damit wir zum einen auf Deine Bedürfnisse (bspw. Essen, Beeinträchtigungen etc.) Rücksicht nehmen können und wir, im Bedarfsfall, Dir unmittelbar helfen können. Daten für unsere Öffentlichkeitsarbeit (wir wollen gerne Fotos von Dir veröffentlichen) sind nicht für die Teilnahme am Sommerprogramm notwendig. Damit wir diese verarbeiten können, benötigen wir die Einwilligung Deiner Eltern / erziehungsberechtigten Personen.
 					</div>
@@ -134,7 +134,7 @@
 							<thead>
 								<tr>
 									<th><strong>Datensatzbezeichnung</strong></th>
-									<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
+									<th><strong>Rechtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
 									<th><strong>Geplante Löschung</strong></th>
 									<th><strong>Externe Weitergabe?</strong></th>
 									<th><strong>Zweck der Weiterleitung</strong></th>
@@ -194,7 +194,7 @@
 							<thead>
 								<tr>
 									<th><strong>Datensatzbezeichnung</strong></th>
-									<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
+									<th><strong>Rechtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
 									<th><strong>Geplante Löschung</strong></th>
 									<th><strong>Externe Weitergabe?</strong></th>
 									<th><strong>Zweck der Weiterleitung</strong></th>
