--- a/public/templates/agb/ds-jdbl-it.html
+++ b/public/templates/agb/ds-jdbl-it.html
@@ -60,124 +60,124 @@
 						</thead>						
 						<tbody>
 						<tr>
-							<td>Vor- und Nachname</td>
-							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Teilnahme am Programm, da die Teilnehmer anagrafisch erfasst werden müssen</td>
-							<td>Ende des darauffolgenden Kalenderjahres</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>Nome e cognome</td>
+							<td>Articolo 6, paragrafo 1, lettera b) - necessario per la partecipazione al programma, in quanto i partecipanti devono essere registrati anagrafica-mente</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>Vor- und Nachname der Eltern / erziehungsberechtigten Personen</td>
-							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Kontaktierung der Eltern / erziehungsberechtigten Personen des Teilnehmers im Bedarfsfal</td>
-							<td>Ende des darauffolgenden Kalenderjahre</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>Nome e cognome dei genitori / esercenti potestà genitoriale</td>
+							<td>Art. 6, comma 1, lettera b) - necessa-rio per contattare i genitori/ esercenti potestà genitoriale del partecipante in caso di necessità</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>Vor- und Nachname des Notfallkontakts (falls nicht Eltern / erziehungsberechtigten Personen)</td>
-							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Kontaktierung einer Kontaktperson des Teilnehmers im Bedarfsfall</td>
-							<td>Ende des darauffolgenden Kalenderjahres</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td></td>
+							<td>Nome e cognome del contatto di emergenza (se non i genitori/ esercenti potestà genitoriale )</td>
+							<td>Art. 6, comma 1, lettera b) - necessa-rio per contattare una persona di riferimento del partecipante in caso di necessi</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>Geburtsdatum</td>
-							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Teilnahme am Programm, da bestimmte Programme nur für Personen ab bzw. bis zu einem bestimmten Alter vorenthalten sind</td>
-							<td>Ende des darauffolgenden Kalenderjahres</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>Data di nascita</td>
+							<td>Articolo 6, paragrafo 1, lettera b) - necessario per la partecipazione al programma, in quanto alcuni pro-grammi sono riservati a persone di una certa età</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>Wohnort (Gemeinde)</td>
-							<td>Für die Teilnahme am Programm, da bestimmte Programme nur für Personen mit Wohnsitz an einem bestimmten Ort vorenthalten sind</td>
-							<td>Ende des darauffolgenden Kalenderjahres</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>Luogo di residenza (comune)</td>
+							<td>Articolo 6, paragrafo 1, lettera b) - necessario per la partecipazione al programma, in quanto alcuni pro-grammi sono riservati a persone residenti in un determinato luogo</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>Besuchte Schulklasse</td>
-							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Teilnahme am Programm, da bestimmte Programme nur für Personen, die eine bestimmte Klasse besuchen, vorenthalten sind</td>
-							<td>Ende des darauffolgenden Kalenderjahres</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>Classe della scuola frequentata</td>
+							<td>Art. 6, comma 1, lettera b) - necessa-rio per la partecipazione al program-ma, in quanto alcuni programmi sono riservati solo a persone che frequenta-no una determinata classe</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>Telefonnummer / Handynummer der Eltern / erziehungsberechtigten Persone</td>
-							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Bozen-Land bei dringenden organisatorischen Angelegenheiten (Termine, Terminverschiebungen, etc.) mit den Eltern / erziehungsberechtigten Personen unmittelbar Kontakt aufnehmen zu können. Das Interesse des JD Bozen-Land, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der  Eltern</td>
-							<td>Ende des darauffolgenden Kalenderjahres</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>Numero di telefono / numero di cellulare dei genitori /  esercenti potestà genitoriale</td>
+							<td>Art. 6, comma 1, lettera f) - interesse legittimo del JD Bozen-Land di potersi rivolgere direttamente ai genitori/ esercenti potestà genitoriale per questioni organizzative urgenti (appuntamenti, cancellazioni, ecc.); L’interesse legittimo del JD Bozen-Land a fornire informazioni organiz-zative sul programma è da considerar-si supera il diritto alla protezione dei dati dei genitori/ esercenti potestà genitoriale</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>Telefonnummer \/ Handynummer des Notfallkontakts (falls nicht Eltern \/ erziehungsberechtigten Personen)></td>
-							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Bozen-Land, bei Dringlichkeiten Notfallkontakt erreichen zu können. Das Interesse des JD Bozen-Land, im Bedarfsfall den Notfallkontakt erreichen zu können überwiegt dem Interesse des Notfallkontakts auf das Recht des Schutzes der Daten</td>
-							<td>Ende des darauffolgenden Kalenderjahres</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>Numero di telefono / numero di cellulare dei genitori /  esercenti potestà genitoriale</td>
+							<td>Art. 6, comma 1, lettera f) - legittimo interesse del JD Bozen-Land a contattare i genitori/ esercenti potestà genitoriale in caso di urgenza. L'interesse del JD  JD Bozen-Land di poter contattare i genitori/ esercenti potestà genitoriale in caso di necessità supera  il diritto dei genitori/ esercen-ti potestà genitoriale  alla protezione dei dati</td>
+							<td>Fine dell'anno solare successivo alla partecipazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
-							<td>E-Mail der Eltern / der erziehungsberechtigten Personen</td>
-							<td>Interesse des JD Bozen-Land, organisatorische Informationen (bspw. zum Programm, Hinweise, etc.) den Eltern / erziehungsberechtigten Personen papierlos zusenden zu können. Das Interesse des JD Bozen-Land, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der Eltern / erziehungsberechtigten Personen</td>
-							<td>Die Daten werden für die Zusendung des Programmkatalogs für kommende Jahre gespeichert, um die Eltern / erziehungsberechtigten Personen über die nächsten Sommerprogramme zu informieren. Diese Daten werden bei Ausübung Recht auf Löschung gelöscht</td>
-							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
-							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+							<td>E-mail dei genitori /  esercenti potestà genitoriale</td>
+							<td>Art. 6, comma 1, lettera f) - legittimo interesse del JD Bozen-Land a poter inviare informazioni organizzative (ad es. sul programma, note, ecc.) ai genitori /  esercenti potestà genitoria-le in forma non cartacea. L'interesse legittimo del JD Bozen-Land a fornire informazioni organizzative sul programma supera il diritto  dei genitori/ esercenti potestà genitoriale alla protezione dei dati</td>
+							<td>I dati saranno conser-vati per l'invio del prospetto informativo degli anni seguenti, al fine di informare i genitori/tutori sui prossimi programmi estivi. Tali dati verranno cancellati in caso di esercizio del diritto di cancellazione</td>
+							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
+							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						</tbody>
 						</table>
 					</table>
 				</li>
 				<li>
-					<h4>Übersicht über die Verarbeitung von Gesundheitsdaten</h4>
+					<h4>Panoramica del trattamento dei dati sanitari</h4>
 					<div>
 						<table style="font-size: 60%">
 							<thead>
 								<tr>
-									<th><strong>Datensatzbezeichnung</strong></th>
-									<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
-									<th><strong>Geplante Löschung</strong></th>
-									<th><strong>Externe Weitergabe?</strong></th>
-									<th><strong>Zweck der Weiterleitung</strong></th>
+									<th><strong>Categoria dati</strong></th>
+									<th><strong>Base giuridica GDPR - Finalità del trattamento</strong></th>
+									<th><strong>Cancellazione pianifi-cata</strong></th>
+									<th><strong>Trasferimento die dati</strong></th>
+									<th><strong>Finalità del trasferimento</strong></th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td>Gesundheitsdaten (Allergien, Lebensmit-telunverträglichkeiten, Medikamente)</td>
-									<td>Art. 6, Abs. 1, Buchst. a) und d) sowie Art. 9, Abs. 1 – notwen-dig, um der Aufsichtspflicht nachzukommen; Schutz des Minderjährigen vor lebensbe-drohlichen Situationen; Einwil-ligung der erziehungsberechtig-ten Personen notwendig</td>
-									<td>Nach Beendigung des Programms</td>
+									<td>Dati sulla salute (allergie, intolleranze alimentari, farmaci)</td>
+									<td>Art. 6, comma 1, lettere a) e d) e art. 9, comma 1 - necessari per l'adempimento del dovere di sorveglianza; protezione del minore da situazioni di pericolo di vita; necessario il consenso degli esercenti potestà genitoriale</td>
+									<td>Alla fine del programma</td>
 									<td>
 										<ul>
-											<li>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</li>
-											<li>Arzt / Sanitäter (im Be-darfsfall)</li>
+											<li>Il programma di registrazione online viene eseguito tramite un server noleggiato, che si trova in Austria</li>
+											<li>Medico / paramedico (in caso di necessità)</li>
 										</ul>
 									</td>
 									<td>
 										<ul>
-											<li>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungs-vertrages</li>
-											<li>Art. 6, Abs. 1, Buchst. d) – Schutz des Lebens </li>
-										</ul>
-									</td>
-								</tr>
-								<tr>
-									<td>Gesundheitsdaten (Angaben zu physischer und/oder psychischer Beeinträchtigung</td>
-									<td>Art. 6, Abs. 1, Buchst. a) und d) sowie Art. 9, Abs. 1 – notwen-dig, um der Aufsichtspflicht nachzukommen; Schutz des Minderjährigen vor lebensbe-drohlichen Situationen; Einwil-ligung der erziehungsberechtig-ten Personen notwendig</td>
-									<td>Nach Beendigung des Programms</td>
-									<td>
-										<ul>
-											<li>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</li>
-											<li>Arzt / Sanitäter (im Be-darfsfall)</li>
-										</ul>
-									</td>
-									<td>
-										<ul>
-											<li>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungs-vertrages</li>
-											<li>Art. 6, Abs. 1, Buchst. d) – Schutz des Lebens </li>
+											<li>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto di trattamento</li>
+											<li>Articolo 6, comma 1, lettera d) - Tutela della vita </li>
 										</ul>
 									</td>
 								</tr>
 								<tr>
-									<td>Gesundheitsdaten (ärztliches Attest, welches die Nichtteilnahme am Pro-gramm wegen Krankheit bestätigt</td>
-									<td>Art. 6, Abs. 1, Buchst. a) b) und d) sowie Art. 9, Abs. 1 – notwendig, um die Anzahlung für das Programm zurückzuerhal-ten; gerechtfertigte Auflösung des Vertrages; Einwilligung der erziehungsberechtigten Personen notwendig</td>
-									<td>Nach Verifizierung seitens des JD Bozen-Land, dass der Auflö-sungsgrund des Vertra-ges besteht</td>
+									<td>Dati sulla salute (informazioni sulla menomazione fisica e/o mentale)</td>
+									<td>Art. 6, comma 1, lettere a) e d) e art. 9, comma 1 - necessari per l'adempimento del dovere di sorveglianza; protezione del minore da situazioni di pericolo di vita; necessario il consenso degli esercenti potestà genitoria-le</td>
+									<td>Alla fine del programma</td>
+									<td>
+										<ul>
+											<li>Il programma di registrazione online viene eseguito tramite un server noleggiato, che si trova in Austria</li>
+											<li>Medico / paramedico (in caso di necessità)</li>
+										</ul>
+									</td>
+									<td>
+										<ul>
+											<li>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto di trattamento</li>
+											<li>Articolo 6, comma 1, lettera d) - Tutela della vita </li>
+										</ul>
+									</td>
+								</tr>
+								<tr>
+									<td>Dati sanitari (certificato medico che conferma la non partecipazione al programma a causa di malattia)</td>
+									<td>Art. 6, comma 1, lettere a) b) e d) e art. 9, comma 1 - necessa-rio per poter richiedere il contributo di partecipazione al programma; necessario il consenso degli esercenti potestà genitoriale</td>
+									<td>Dopo la verifica da parte del JD Bozen-Land sulla sussistenza del motivo di risolu-zione del contratto</td>
 									<td></td>
 									<td></td>
 								</tr>
@@ -187,16 +187,16 @@
 				</li>
 				<li>
 
-					<h4>Übersicht über die Verarbeitung der fakultativen personenbezogenen Daten</h4>
+					<h4>Panoramica sul trattamento dei dati personali facoltativi</h4>
 					<div>
 						<table style="font-size: 60%">
 							<thead>
 								<tr>
-									<th><strong>Datensatzbezeichnung</strong></th>
-									<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
-									<th><strong>Geplante Löschung</strong></th>
-									<th><strong>Externe Weitergabe?</strong></th>
-									<th><strong>Zweck der Weiterleitung</strong></th>
+									<th><strong>Categoria dati</strong></th>
+									<th><strong>Base giuridica GDPR - Finalità del trattamento</strong></th>
+									<th><strong>Cancellazione pianificata</strong></th>
+									<th><strong>Trasferimento die dati?</strong></th>
+									<th><strong>Finalità del trasferimento</strong></th>
 								</tr>
 							</thead>
 							<tbody>
