--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -393,6 +393,8 @@
 									<div class="panel-body">
 										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
 										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
+										<div ng-show="(platform.isJDUL()) && lang == 'de'" ng-include src='"templates/agb/ds-jdul-de.html"'></div>
+										<div ng-show="(platform.isJDUL()) && lang == 'it'" ng-include src='"templates/agb/ds-jdul-it.html"'></div>
 									</div>
 								</div>
 						</div>
@@ -401,8 +403,8 @@
 								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH3_JDBL" | translate}}</strong></input>
 								<div class="panel panel-default" ng-class="healthVisibility ? 'show' : 'hidden'">
 									<div class="panel-body">
-										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
-										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
 									</div>
 								</div>
 						</div>
