--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -357,16 +357,6 @@
 							</div>
 						</div>
 						<br />
-						<div ng-show="(platform.isTest() || platform.isJDUL())">
-							<input type='checkbox' name='insurance' ng-model='acceptInsurance'><strong>{{"RESERVATION.LABEL_INSUR1" | translate}}</strong></input>
-							<div class="panel panel-default">
-								<div class="panel-body">
-									<div ng-show="platform.isJDUL() && lang == 'de'" ng-include src='"templates/insurance/insurance-jdul-de.html"'></div>
-									<div ng-show="platform.isJDUL() && lang == 'it'" ng-include src='"templates/insurance/insurance-jdul-it.html"'></div>
-								</div>
-							</div>
-						</div>
-						<br />
 						<div ng-show="(platform.isTest() || platform.isKiso())">
 							<input type='checkbox' name='privacy' ng-model='acceptPrivacy'><strong>{{"RESERVATION.LABEL_PRIVACY1" | translate}}<button type="button" class="btn btn-default" ng-click="togglePrivacy()" >{{"RESERVATION.LABEL_PRIVACY2" | translate}}</button>{{"RESERVATION.LABEL_PRIVACY3" | translate}}</strong></input>
 							<div class="panel panel-default" ng-class="privacyVisibility ? 'show' : 'hidden'">
@@ -393,13 +383,22 @@
 									<div class="panel-body">
 										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
 										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
-										<div ng-show="(platform.isJDUL()) && lang == 'de'" ng-include src='"templates/agb/ds-jdul-de.html"'></div>
-										<div ng-show="(platform.isJDUL()) && lang == 'it'" ng-include src='"templates/agb/ds-jdul-it.html"'></div>
+										
 									</div>
 								</div>
 						</div>
 						<br />
-						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJUDL())">
+						<div ng-show="(platform.isTest() || platform.isJDUL())">
+							<input type='checkbox' name='insurance' ng-model='acceptInsurance'><strong>{{"RESERVATION.LABEL_INSUR1" | translate}}</strong></input>
+							<div class="panel panel-default">
+								<div class="panel-body">
+									<div ng-show="platform.isJDUL() && lang == 'de'" ng-include src='"templates/insurance/insurance-jdul-de.html"'></div>
+									<div ng-show="platform.isJDUL() && lang == 'it'" ng-include src='"templates/insurance/insurance-jdul-it.html"'></div>
+								</div>
+							</div>
+						</div>
+						<br />
+						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL())">
 								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH3_JDBL" | translate}}</strong></input>
 								<div class="panel panel-default" ng-class="healthVisibility ? 'show' : 'hidden'">
 									<div class="panel-body">
