order of approvals in registration form jdul

--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -357,26 +357,7 @@
 							</div>
 						</div>
 						<br />
-						<div ng-show="(platform.isTest() || platform.isKiso())">
-							<input type='checkbox' name='privacy' ng-model='acceptPrivacy'><strong>{{"RESERVATION.LABEL_PRIVACY1" | translate}}<button type="button" class="btn btn-default" ng-click="togglePrivacy()" >{{"RESERVATION.LABEL_PRIVACY2" | translate}}</button>{{"RESERVATION.LABEL_PRIVACY3" | translate}}</strong></input>
-							<div class="panel panel-default" ng-class="privacyVisibility ? 'show' : 'hidden'">
-								<div class="panel-body">
-									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'de'" ng-include src='"templates/agb/privacy-kiso-de.html"'></div>
-									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'it'" ng-include src='"templates/agb/privacy-kiso-it.html"'></div>
-								</div>
-							</div>
-						</div>
-						<br />
-						<div ng-show="(platform.isTest() || platform.isKiso())">
-
-							<input type='checkbox' name='media' ng-model='acceptsMediaPublication'><strong>{{"RESERVATION.LABEL_MEDIA1" | translate}}<button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_MEDIA2" | translate}}</button>{{"RESERVATION.LABEL_MEDIA3" | translate}}</strong></input>
-							<div class="panel panel-default" ng-class="mediaVisibility ? 'show' : 'hidden'">
-								<div class="panel-body">
-									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'de'" ng-include src='"templates/agb/media-kiso-de.html"'></div>
-									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'it'" ng-include src='"templates/agb/media-kiso-it.html"'></div>
-								</div>
-							</div>
-						</div>
+						
 						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL())">
 								<input type='checkbox' name='media-jdbl' ng-model='acceptsMediaPublication'><strong>{{"RESERVATION.LABEL_MEDIA1_JDBL" | translate}}{{"RESERVATION.LABEL_MEDIA2_JDBL" | translate}}{{"RESERVATION.LABEL_MEDIA3_JDBL" | translate}}</strong></input>
 								<div class="panel panel-default" ng-class="mediaVisibility ? 'show' : 'hidden'">
@@ -386,6 +367,16 @@
 										
 									</div>
 								</div>
+						</div>
+						<br />
+						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL())">
+								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH3_JDBL" | translate}}</strong></input>
+								<!-- <div class="panel panel-default" ng-class="healthVisibility ? 'show' : 'hidden'">
+									<div class="panel-body">
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
+									</div>
+								</div> -->
 						</div>
 						<br />
 						<div ng-show="(platform.isTest() || platform.isJDUL())">
@@ -398,14 +389,24 @@
 							</div>
 						</div>
 						<br />
-						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL())">
-								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH3_JDBL" | translate}}</strong></input>
-								<div class="panel panel-default" ng-class="healthVisibility ? 'show' : 'hidden'">
-									<div class="panel-body">
-										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
-										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
-									</div>
+						<div ng-show="(platform.isTest() || platform.isKiso())">
+							<input type='checkbox' name='privacy' ng-model='acceptPrivacy'><strong>{{"RESERVATION.LABEL_PRIVACY1" | translate}}<button type="button" class="btn btn-default" ng-click="togglePrivacy()" >{{"RESERVATION.LABEL_PRIVACY2" | translate}}</button>{{"RESERVATION.LABEL_PRIVACY3" | translate}}</strong></input>
+							<div class="panel panel-default" ng-class="privacyVisibility ? 'show' : 'hidden'">
+								<div class="panel-body">
+									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'de'" ng-include src='"templates/agb/privacy-kiso-de.html"'></div>
+									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'it'" ng-include src='"templates/agb/privacy-kiso-it.html"'></div>
 								</div>
+							</div>
+						</div>
+						<br />
+						<div ng-show="(platform.isTest() || platform.isKiso())">
+							<input type='checkbox' name='media' ng-model='acceptsMediaPublication'><strong>{{"RESERVATION.LABEL_MEDIA1" | translate}}<button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_MEDIA2" | translate}}</button>{{"RESERVATION.LABEL_MEDIA3" | translate}}</strong></input>
+							<div class="panel panel-default" ng-class="mediaVisibility ? 'show' : 'hidden'">
+								<div class="panel-body">
+									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'de'" ng-include src='"templates/agb/media-kiso-de.html"'></div>
+									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'it'" ng-include src='"templates/agb/media-kiso-it.html"'></div>
+								</div>
+							</div>
 						</div>
 						<br />
 						<div ng-show="(platform.isTest() || platform.isKiso())">
