--- a/public/templates/reportOverview.html
+++ b/public/templates/reportOverview.html
@@ -73,7 +73,7 @@
 				<td>{{reg.firstNameUser}}</td>
 				<td>{{reg.lastNameUser}}</td>
 				<td>{{reg.fee}}</td>
-				<td>{{reg.paied}}</td>
+				<td>{{formatBool(reg.paied)}}</td>
 				<td>{{reg.commentInternal}}</td>
 				<td ng-repeat='a in activityNames'>
 					{{formatBoolToSymbol(reg[a])}}
